tests/machine/x/pascal/group_by_join.error
line: 61
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/group_by_join.pas
group_by_join.pas(45,11) Error: Identifier not found "c"
group_by_join.pas(47,46) Error: Identifier not found "c"
group_by_join.pas(49,38) Error: Identifier not found "g"
group_by_join.pas(50,46) Error: Identifier not found "g"
group_by_join.pas(61) Fatal: There were 4 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

